Добавлены изображения, контакты, ссылка на работу

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-        Мой email: stroryz@gmail.com
+        <a href="mailto:stroryz@gmail.com">stroryz@gmail.com</a>
+        <a href="tel:+79032848972">+7(903)284 89 72</a>
       </div>
     </header>
 
@@ -25,6 +26,10 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="source\IMG_2062_2.jpg" alt="Пока что не я" width="928" height="536">
+          <figcaption>Здесь скоро буду я, а пока Маська</figcaption>
+        </figure>
         <h3>Пара слов о себе</h3>
         <p>Меня зовут Михаил. И я решил радикально изменить свою профессию и стать web-разработчиком. Для начала я хочу проверить свои силы и постепенно начать делать свой собственный сайт-портфолио.</p>
         <h3>Что я уже умею</h3>
@@ -35,10 +40,12 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+        <figure class="project-image">
+          <img src="source\project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+        </figure>
         <h3>Сайт инструктора Кекса</h3>
         <p>Небольшой лендинг о школе для начинающих.</p>
-
+        <a class="button" href="source\project\index.html">Открыть страницу</a>
         <h3>Блог начинающего верстальщика</h3>
         <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -46,7 +53,8 @@
 
     <footer class="page-footer">
       <div class="container">
-       Phone: +7(903)2848972 Email: stroryz@gmail.com
+       <a class="footer-email" href="mailto:stroryz@gmail.com">stroryz@gmail.com</a>
+       <a class="footer-phone" href="tel:+79032848972">+7(903)284 89 72</a>
       </div>
     </footer>
   </body>
